# journal

./: .gitignore  README.md  changle_log.txt  docker-compose.yml  pyproject.toml
journal/: Dockerfile  cert.pem  key.pem  requirements.txt
journal/admin/: views.py
journal/admin_panel/: controllers.py  forms.py  views.py
journal/journal/: asgi.py  settings.py  urls.py  wsgi.py
journal/profiles/: admin.py  apps.py  controllers.py  forms.py  models.py  services.py  views.py
journal/profiles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_anthropometric_add_alter_anthropometric_ads_and_more.py  0004_functional.py  0005_physicalstandards.py  0006_health.py
journal/static/: demo.xlsx  group_1.xlsx  ~$demo.xlsx
journal/static/css/: base.css
journal/static/scripts/: index.js
journal/templates/: admin.html  base.html  edit_profile.html  header.html  index.html  login.html  profile.html  register.html  statistics.html
journal/users/: admin.py  controllers.py  forms.py  misc.py  models.py  services.py  views.py
journal/users/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_customuser_gender.py  0004_alter_customuser_gender.py  0005_alter_customuser_birth_year_alter_customuser_gender_and_more.py  0006_alter_customuser_birth_year_and_more.py  0007_alter_customuser_group.py  0008_alter_customuser_gender.py
