[tool.poetry]
name = "dnevnik"
version = "0.1.0"
description = ""
authors = ["dopefile <merlinincorp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
bokeh = "^3.3.4"
xlsxwriter = "^3.2.0"
pip-chill = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
